# happy-hour

./: .gitignore  README.md  erd.md  gemini_arch_prompt  package-lock.json
.cursor/: mcp.json
.cursor/rules/: cursor_rule.mdc  cursor_step_by_step.mdc  front_design.md  prd.md  prompt-engineering-guidelines.mdc  trd.md
apps/api/: pyproject.toml  test_supabase.py
backend/app/: main.py
backend/app/migrations/: 20240611_add_thumbnail_to_discounts.sql  20240612_add_category_to_stores.sql
frontend/: middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  repomix-output.xml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/login/: page.tsx
frontend/components/: alert-dialog-basic.tsx  bottom-navigation.tsx  category-filter.tsx  category-management-dialog.tsx  confirm-dialog.tsx  location-error-banner.tsx  naver-link.tsx  onboarding-dialog.tsx  store-card-skeleton.tsx  store-card.tsx  store-card2.tsx  terms-modal-component.tsx
frontend/contexts/: app-context.tsx  cart-context.tsx  gift-context.tsx
frontend/helpers/: price.ts
frontend/hooks/: use-create-reservation.ts  use-create-store.ts  use-filtered-stores.ts  use-get-discounts-by-menu.ts  use-get-events-by-store-id.ts  use-get-my-reservations.ts  use-get-reservation-by-id.ts  use-get-store-by-id.ts  use-get-store-list.ts  use-onboarding-check.ts  use-onboarding-redirect.ts  use-user.tsx
frontend/lib/: data.ts  event-vm.ts  store-data.ts  store-detail-vm.ts  store-list-vm.ts  utils.ts
frontend/public/: manifest.json
frontend/styles/: globals.css
(+227 files in other folders)
